# shilp-sdk-py

./: IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: advanced_usage.py  basic_usage.py
shilp/: __init__.py  client.py  discovery_client.py  models.py
tests/: __init__.py  test_client.py  test_models.py
